get transaction & jwt auth
