# routes/api.php
@@ -14,12 +14,15 @@ use Illuminate\Http\Request;
 */
 Route::group(['prefix' => 'v1'], function () {
 
-//Route::middleware('auth:api')->get('/user', function (Request $request) {
-//    return $request->user();
+    Route::group(['middleware' => 'auth:api'], function () {
+        Route::get('transactions', 'PaymentAPIController@getTransactions');
+
+    });
 
 
         Route::post('session/create', 'PaymentAPIController@createSessionID');
         Route::post('pay', 'PaymentAPIController@pay');
+        Route::post('user/login', 'UserAPIController@login');
 
     });
 
